# dotfit

./: .gitignore  AGENTS.md  CHECKLISTS.md  CLAUDE.md  DYNAMIC_LINEEXPLORER_COMPLETE.md  GUIDE.md  IMPROVEMENTS_SUMMARY.md  LINEEXPLORER_ALL_WORKING.md  LINEEXPLORER_FINAL_IMPROVEMENTS.md  LINEEXPLORER_IMPROVEMENTS.md  LINEEXPLORER_STREAMS_FINAL.md  LINEEXPLORER_STREAMS_FIXED.md  LINE_EXPLORER_SUMMARY.md  NOTEBOOKS_VERIFIED.md  QUICKSTART_LINE_EXPLORER.md  README.md  README_LINEEXPLORER.md  TODO.md  VERIFY_STREAMS_WORKING.md  pyproject.toml  test_interactive.py
dotfit/: FeII_optical.json  __init__.py  bla.json  broken_modified_bb.py  emission_lines.py  emission_lines_v0.py  get_lines.py  grotrian.py  line_explorer.py  models.py  unite_simple.py
dotfit/data/emission_lines/: broad_permitted.csv  coronal.csv  emission_lines.csv  feii_forbidden.csv  feii_opt_kurucz.csv  feii_permitted.csv  feii_sigut03.csv  feti_opt_kurucz.csv  h_lines.csv  hei_lines.csv  narrow.csv
examples/: README.md  abell2744-8204-45924-20260202.csv  abell2744-8204-45924-20260203.csv  abell2744-8204-45924-20260203_v4.csv  grotrian_explorer.py  grotrian_feii.py  grotrian_feii_panels.py  line_explorer_monster.py  monster_lines_v1.csv  monster_v3.csv  monster_v4.csv  monster_v5.csv  monster_v6.csv
examples/bak/: abell2744-8204-45924-20260202_bak2.csv  abell2744-8204-45924-20260202_bak3.csv  monster_v2.csv
tests/: test_emission_lines_legacy_helpers.py  test_emission_lines_regression.py  test_grotrian.py  test_line_explorer.py  test_multiplet_ratios.py  test_wavelength.py
(+15 files in other folders)
